* Version 0.8-rc2
 - config file in package updated (pull fixes from Gentoo)
 - cleanup code a bit
 - make --help more [non-root] friendly
 - change default 'command spawn' messages to off (use --verbose to
   get back old noisy behavior)
 - check for setprogname() so we build on FreeBSD 6.1 (#1557585, fix
   from Diego Petteno)
 - fix error in memory allocation when using multiple facilities #1217560

* Version 0.8-rc1
 - new keyword: break
 - config file in package updated (synch with break keyword)
 - kernel logging problem fix
 - race condition fix
 - metalog.conf man page added
 - log rotation can be disabled with maxsize or maxtime = 0

* Version 0.7
 - Logging is now synchronous by default. Use --async to get back to
   the asynchronous behavior.
 - Duplicate messages are now only logged once.
 - Negative regexes were implemented and programs can now also be
   matched against regexes. See the new neg_regex, program_regex and
   program_neg_regex keywords.
 - The maximum urgency can now be specified for each block. A new
   keyword, "maximum" completes "minimum".
 - A PID file is now created. It defaults to /var/run/metalog.pid but
   it can be changed with the --pidfile switch.
 - The location of the configuration file can now be changed with
   --with-configfile.
 - The code was cleaned up.

* Version 0.7-beta
 - This is a transitional version with new features contributed by
   Hendrick Visage.

* Version 0.6
 - Metalog is now working on Linux, OpenBSD, FreeBSD and NetBSD.
 - New --consolelevel option to set up the console level on Linux.
 - RPM packages are now available.

* Version 0.5
 - First public release.